--- a/leSalCoin/config/services.yaml
+++ b/leSalCoin/config/services.yaml
@@ -5,7 +5,8 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
-    
+    pictures_directory: '%kernel.project_dir%/public/upload/pictures'
+
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -29,3 +30,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Service\FileUploader:
+        arguments:
+            $targetDirectory: '%pictures_directory%'
