services email OK

--- a/leSalCoin/config/packages/security.yaml
+++ b/leSalCoin/config/packages/security.yaml
@@ -46,5 +46,5 @@ security:
 
           - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
           - { path: ^/user/add, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-          - { path: ^/, roles: ROLE_USER }
-          - { path: ^/annoncebak/add, roles: ROLE_USER }
+          - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+          - { path: ^/annonce/add, roles: ROLE_USER }
